<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.franz.studienplaner.MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/position1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/example"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/checkBox1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/position2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/example"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name1" />

    <TextView
        android:id="@+id/position3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/example"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/checkBox3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name2" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/erledigt"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/erledigt"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note1" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/erledigt"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note2" />

    <EditText
        android:id="@+id/name1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:hint="@string/kursname"
        android:inputType="text"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/note1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position1" />

    <EditText
        android:id="@+id/name2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="13dp"
        android:hint="@string/kursname"
        android:inputType="text"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/note2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position2" />

    <EditText
        android:id="@+id/name3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="13dp"
        android:hint="@string/kursname"
        android:inputType="text"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/note3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position3" />

    <EditText
        android:id="@+id/note1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:hint="@string/note"
        android:inputType="numberDecimal"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/checkBox1"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

    <EditText
        android:id="@+id/note2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="11dp"
        android:hint="@string/note"
        android:inputType="numberDecimal"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/checkBox2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <EditText
        android:id="@+id/note3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="11dp"
        android:hint="@string/note"
        android:inputType="numberDecimal"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/bearbeiten"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name3" />

</android.support.constraint.ConstraintLayout>
